--- a/LPOO1617_Final/build.gradle
+++ b/LPOO1617_Final/build.gradle
@@ -120,6 +120,7 @@ project(":html") {
 project(":core") {
     apply plugin: "java"
 
+    sourceSets.test.java.srcDirs = ["/test"]
 
     dependencies {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
@@ -129,6 +130,10 @@ project(":core") {
         compile "net.dermetfan.libgdx-utils:libgdx-utils:0.13.4"
         compile "net.dermetfan.libgdx-utils:libgdx-utils-box2d:0.13.4"
         compile "de.tomgrill.gdxfacebook:gdx-facebook-core:1.3.0"
+
+        // These are new!
+        testCompile "junit:junit:4.12"
+        testCompile "org.mockito:mockito-core:2.2.7"
     }
 }
 
