--- a/LPOO1617_Final/core/build.gradle
+++ b/LPOO1617_Final/core/build.gradle
@@ -9,3 +9,9 @@ sourceSets.main.java.srcDirs = [ "src/" ]
 eclipse.project {
     name = appName + "-core"
 }
+
+dependencies {
+    compile 'junit:junit:4.12'
+    compile 'junit:junit:4.12'
+    compile 'com.badlogicgames.gdx:gdx-backend-headless:1.9.6'
+}
