--- a/LPOO1617_Final/android/build.gradle
+++ b/LPOO1617_Final/android/build.gradle
@@ -22,6 +22,9 @@ android {
         minSdkVersion 9
         targetSdkVersion 25
     }
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
 }
 
 
