--- a/LPOO1617_Final/build.gradle
+++ b/LPOO1617_Final/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     }
     dependencies {
         classpath 'de.richsource.gradle.plugins:gwt-gradle-plugin:0.6'
-        classpath 'com.android.tools.build:gradle:2.3.2'
+        classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.0'
     }
 }
@@ -75,7 +75,9 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86"
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86_64"
         compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
-        compile "de.tomgrill.gdxfacebook:gdx-facebook-android:1.3.0"
+      //  compile "de.tomgrill.gdxfacebook:gdx-facebook-android:1.3.0"
+      //  compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+
     }
 }
 
