--- a/LPOO1617_Final/android/AndroidManifest.xml
+++ b/LPOO1617_Final/android/AndroidManifest.xml
@@ -4,9 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:versionCode="1"
     android:versionName="1.0">
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="25"
-        tools:overrideLibrary="de.tomgrill.gdxfacebook.android,com.facebook, android.support.customtabs"/>
+    <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="25"
+        tools:overrideLibrary="de.tomgrill.gdxfacebook.android,com.facebook, android.support.customtabs, com.google.android.gms:play-services-auth:11.0.0"/>
+
 
     <application
         android:allowBackup="true"
