--- a/LPOO1617_Final/build.gradle
+++ b/LPOO1617_Final/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         jcenter()
     }
     dependencies {
+
         classpath 'de.richsource.gradle.plugins:gwt-gradle-plugin:0.6'
         classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.0'
@@ -37,6 +38,9 @@ allprojects {
 project(":desktop") {
     apply plugin: "java"
 
+    repositories {
+        mavenCentral()
+    }
 
     dependencies {
         compile project(":core")
@@ -45,7 +49,6 @@ project(":desktop") {
         compile "com.badlogicgames.gdx:gdx-bullet-platform:$gdxVersion:natives-desktop"
         compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
         compile "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
-        compile "de.tomgrill.gdxfacebook:gdx-facebook-desktop:1.3.0"
     }
 }
 
@@ -75,9 +78,7 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86"
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86_64"
         compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
-      //  compile "de.tomgrill.gdxfacebook:gdx-facebook-android:1.3.0"
-      //  compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-
+        compile fileTree(include: ['*.jar'], dir: 'libs')
     }
 }
 
@@ -95,6 +96,7 @@ project(":ios") {
         compile "com.badlogicgames.gdx:gdx-bullet-platform:$gdxVersion:natives-ios"
         compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-ios"
         compile "de.tomgrill.gdxfacebook:gdx-facebook-ios:1.3.0"
+
     }
 }
 
